<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/route_detail_map_view"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/detail_map_stop_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="8dp"
        android:background="@drawable/frame_medium"
        android:elevation="1dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:visibility="gone"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/route_detail_map_number_stop_view"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@drawable/frame_round_border"
            android:drawableTop="@drawable/ic_bus_symbol_black_24dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:paddingTop="7dp"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1234" />

        <TextView
            android:id="@+id/route_detail_map_description_stop_view"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/route_detail_map_number_stop_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Connell St, Parnell Street" />

        <TextView
            android:id="@+id/route_detail_map_routes_view"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/secondary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/route_detail_map_number_stop_view"
            app:layout_constraintTop_toBottomOf="@+id/route_detail_map_description_stop_view"
            tools:text="Serving Routes: 4, 7, 7a, 7d, 40b, 40d" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>