...
                android:text="@string/route_detail_change_direction"
                android:textColor="@color/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_name_towards_view" />

            <ImageView
                android:id="@+id/route_change_map_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/route_detail_change_map"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
...
